// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders and matches the snapshot 1`] = `
<span
  className="p-spinner p-text--default"
>
  <i
    className="p-icon--spinner u-animation--spin"
  />
</span>
`;

exports[`<Spinner /> renders and matches the snapshot with text 1`] = `
<span
  className="p-spinner p-text--default"
>
  <i
    className="p-icon--spinner u-animation--spin"
  />
  <span
    className="p-icon__text"
  >
    foo
  </span>
</span>
`;
